@@ -6,12 +6,11 @@ import com.projeto.Ecommerce.repository.*;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
+import java.sql.Date;
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.time.ZoneId;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,7 +26,7 @@ public class OrdemService {
     private final CupomRepository cupomRepository;
     private final EstoqueRepository estoqueRepository;
     private final EstoqueService estoqueService;
-
+    private final CategoriaRepository categoriaRepository;
     public OrdemService(
             OrdemRepository ordemRepository,
             ClienteRepository clienteRepository,
@@ -38,7 +37,8 @@ public class OrdemService {
             CartaoRepository cartaoRepository,
             CupomRepository cupomRepository,
             EstoqueRepository estoqueRepository,
-            EstoqueService estoqueService
+            EstoqueService estoqueService,
+            CategoriaRepository categoriaRepository
     ) {
         this.ordemRepository = ordemRepository;
         this.clienteRepository = clienteRepository;
@@ -50,6 +50,7 @@ public class OrdemService {
         this.cupomRepository = cupomRepository;
         this.estoqueRepository = estoqueRepository;
         this.estoqueService = estoqueService;
+        this.categoriaRepository = categoriaRepository;
     }
 
     public void criarOrdem(OrdemRequestDTO dto) {
@@ -65,7 +66,13 @@ public class OrdemService {
         Ordem ordem = new Ordem();
         ordem.setPrecoTotal(dto.getPrecoTotal());
         ordem.setStatus(dto.getStatus());
-        ordem.setData(dto.getData());
+        LocalDate localDate = dto.getData();
+        if (localDate != null) {
+            Date date = (Date) Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
+            ordem.setData(date);
+        } else {
+            ordem.setData(null);
+        }
         ordem.setCliente(cliente);
         ordem.setEndereco(endereco);
         ordemRepository.save(ordem);
@@ -108,32 +115,47 @@ public class OrdemService {
         }
     }
 
-    public List<LivroResumoDTO> listarLivrosDaOrdem(Long ordemId) {
-        return ordemLivroRepository.findPedidosByClienteId(ordemId);
-    }
+    public List<OrdemResumoDTO> buscarOrdens(String nomeCliente, String tituloLivro, String categoria, String status,
 
-    public List<OrdemResumoDTO> buscarOrdens(String nomeCliente, String tituloLivro, String status,
                                              LocalDate dataInicio, LocalDate dataFim,
                                              BigDecimal valorTotal, Long numeroPedido) {
+
         List<Ordem> ordens = ordemRepository.buscarOrdensComFiltros(
                 nomeCliente, tituloLivro, status, dataInicio, dataFim, valorTotal, numeroPedido
         );
 
         return ordens.stream().map(ordem -> {
-            OrdemResumoDTO dto = new OrdemResumoDTO();
-            dto.setNumeroPedido(ordem.getId());
-            dto.setNomeCliente(ordem.getCliente().getCliNome());
-            dto.setValorTotal(ordem.getPrecoTotal());
-            dto.setStatus(ordem.getStatus());
-            dto.setData(ordem.getData());
+            List<LivroQuantidadeDTO> livros = ordem.getLivros().stream()
+                    .map(ol -> new LivroQuantidadeDTO(
+                            ol.getLivro().getLivTitulo(),
+                            ol.getQuantidade(),
+                            ol.getLivro().getCategorias().stream()
+                                    .map(Categorias::getNome)
+                                    .collect(Collectors.toList())
+                    ))
+                    .collect(Collectors.toList());
 
-            List<String> titulos = ordem.getLivros().stream()
-                    .map(ol -> ol.getLivro().getLivTitulo())
-                    .toList();
+            List<String> categorias = ordem.getLivros().stream()
+                    .flatMap(ol -> ol.getLivro().getCategorias().stream())
+                    .map(Categorias::getNome)
+                    .distinct()
+                    .collect(Collectors.toList());
 
-            dto.setLivros(titulos);
-            return dto;
-        }).toList();
+            LocalDate dataConvertida = ordem.getData() != null
+                    ? ((java.sql.Date) ordem.getData()).toLocalDate()
+                    : null;
+
+            return new OrdemResumoDTO(
+                    ordem.getId(),
+                    ordem.getCliente().getCliNome(),
+                    livros,
+                    categorias,
+                    ordem.getPrecoTotal(),
+                    ordem.getStatus(),
+                    dataConvertida
+            );
+        }).collect(Collectors.toList());
+
     }
     public Optional<Ordem> buscarOrdemPorId(Long idOrdem) {
         return ordemRepository.findById(idOrdem); // Busca a ordem pelo ID
@@ -165,7 +187,10 @@ public class OrdemService {
         Ordem novaOrdem = new Ordem();
         novaOrdem.setCliente(ordemOriginal.getCliente());
         novaOrdem.setEndereco(ordemOriginal.getEndereco());
-        novaOrdem.setData(LocalDate.now());
+        LocalDate localDate = LocalDate.now();
+        Date date = (Date) Date.from(localDate.atStartOfDay(ZoneId.systemDefault()).toInstant());
+
+        novaOrdem.setData(date);
         novaOrdem.setStatus("TROCA SOLICITADA");
         novaOrdem.setPrecoTotal(BigDecimal.ZERO);
         novaOrdem = ordemRepository.save(novaOrdem);  // Salve a nova ordem primeiro
@@ -221,6 +246,9 @@ public class OrdemService {
 
         // Não criamos mais o cupom aqui - só quando a troca for autorizada
     }
+    public List<LivroResumoDTO> listarLivrosDaOrdem(Long ordemId) {
+        return ordemLivroRepository.findPedidosByClienteId(ordemId);
+    }
 
     /*
      * Método para atualizar o status de uma ordem de troca
@@ -270,4 +298,15 @@ public class OrdemService {
 
         cupomRepository.save(cupom);
     }
+    public List<LivroResumoDTO> listarLivrosDaOrdemComCategorias(Long clienteId) {
+        List<LivroResumoDTO> livros = ordemLivroRepository.findPedidosByClienteId(clienteId);
+
+        for (LivroResumoDTO livro : livros) {
+            List<String> categorias = categoriaRepository.findNomesByLivroId(livro.getLivroId());
+            livro.setCategorias(categorias);
+        }
+
+        return livros;
     }
+}
+
